--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         <a class="text-white px-3" href="">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="text-white px-3" href="">
-                            <i class="fab fa-twitter"></i>
+                        <a class="text-white px-3" href="https://g.co/kgs/vyAdE8">
+                            <i class="fab fa-google"></i>
                         </a>
                         <a class="text-white px-3" href="">
                             <i class="fab fa-linkedin-in"></i>
