--- a/index.html
+++ b/index.html
@@ -138,24 +138,24 @@
                     <img class="w-80" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
-                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Creative Exterior/Interior 3D Design</h4>
+                            <h4 class="text-primary text-uppercase font-weight-normal mb-md-3"></h4>
                             <h3 class="display-3 text-white mb-md-4">Welcome to OurNest 3D Design Studio</h3>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a>
+                            
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-80" src="img/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
                             <h4 class="text-primary text-uppercase font-weight-normal mb-md-3">Creative Interior Design</h4>
                             <h3 class="display-3 text-white mb-md-4">Make Your Home Better from Inside/Outside</h3>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2 mt-md-4">Learn More</a>
+                            
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-80" src="img/carousel-3.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel-3.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
                             <h4 class="text-primary text-uppercase font-weight-normal mb-md-3"></h4>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                <div class="carousel-item">
-                    <img class="w-80" src="img/carousel-4.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel-4.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 800px;">
                             <h4 class="text-primary text-uppercase font-weight-normal mb-md-3"></h4>
