--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
     <!-- Carousel Start -->
-    <div class="container-fluid p-0">
+    <div class="container-md p-0">
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
