--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel4.jpg" alt="Image">       
+                    <img class="w-100" src="img/Carousel4.jpg" alt="Image">       
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-5.jpg" alt="Image">       
+                    <img class="w-100" src="img/Carousel-5.jpg" alt="Image">       
                 </div>
                 <div class="carousel-item">
                     <img class="w-100" src="img/carousel-3.jpg" alt="Image">       
@@ -167,7 +167,7 @@
                     <img class="w-100" src="img/carousel-4.jpg" alt="Image">             
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel6.jpg" alt="Image">       
+                    <img class="w-100" src="img/Carousel6.jpg" alt="Image">       
                 </div>
             </div>
             <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
