--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item second">
                     <div class="position-relative overflow-hidden">
                         <div class="portfolio-img d-flex align-items-center justify-content-center">
-                            <img class="img-fluid" src="img/Prj6.jpg" alt="">
+                            <img class="img-fluid" src="img/Carousel6.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
                             <h4 class="text-white mb-4">Project Name</h4>
@@ -373,7 +373,7 @@
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
                                 </a>
-                                <a class="btn btn-outline-primary m-1" href="img/Prj6.jpg" data-lightbox="portfolio">
+                                <a class="btn btn-outline-primary m-1" href="img/Carousel6.jpg" data-lightbox="portfolio">
                                     <i class="fa fa-eye"></i>
                                 </a>
                             </div>
@@ -437,7 +437,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item third">
                     <div class="position-relative overflow-hidden">
                         <div class="portfolio-img d-flex align-items-center justify-content-center">
-                            <img class="img-fluid" src="img/Prj11.jpg" alt="">
+                            <img class="img-fluid" src="img/Prj12.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
                             <h4 class="text-white mb-4">Project Name</h4>
@@ -445,13 +445,14 @@
                                 <a class="btn btn-outline-primary m-1" href="">
                                     <i class="fa fa-link"></i>
                                 </a>
-                                <a class="btn btn-outline-primary m-1" href="img/Prj11.jpg" data-lightbox="portfolio">
+                                <a class="btn btn-outline-primary m-1" href="img/Prj12.jpg" data-lightbox="portfolio">
                                     <i class="fa fa-eye"></i>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
+                
                 <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item third">
                     <div class="position-relative overflow-hidden">
                         <div class="portfolio-img d-flex align-items-center justify-content-center">
