--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item third">
                     <div class="position-relative overflow-hidden">
                         <div class="portfolio-img d-flex align-items-center justify-content-center">
-                            <img class="img-fluid" src="img/Carousel-5.jpg" alt="">
+                            <img class="img-fluid" src="img/Dining.jpg" alt="">
                         </div>
                         <div class="portfolio-text bg-secondary d-flex flex-column align-items-center justify-content-center">
                             <h4 class="text-white mb-4">Project Name</h4>
